tests/error/type_match/base_case_const_to_non_const_ref.bz
function test()
{
	const ci = 0i32;
	let _: &int32 = ci;
}
